[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/IntroLevel.tmx" type="PackedScene" id=1]
[ext_resource path="res://items/Pedestal.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/IntroScene.gd" type="Script" id=3]
[ext_resource path="res://textures/Tiles-Intro.png" type="Texture" id=4]
[ext_resource path="res://items/MoneyBag.tscn" type="PackedScene" id=5]
[ext_resource path="res://items/HiddenTreasure.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 0.5 )

[sub_resource type="Animation" id=2]
resource_name = "RevealSecret"
length = 1.2

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 11 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 78 )

[node name="IntroScene" type="Node2D"]
script = ExtResource( 3 )

[node name="IntroLevel" parent="." instance=ExtResource( 1 )]

[node name="Pedestal" parent="." instance=ExtResource( 2 )]
position = Vector2( 124, 132 )
drop = "bigHeart"

[node name="Pedestal2" parent="." instance=ExtResource( 2 )]
position = Vector2( 253, 132 )
drop = "morningStar"

[node name="Pedestal3" parent="." instance=ExtResource( 2 )]
position = Vector2( 384, 132 )
drop = "morningStar"

[node name="Pedestal4" parent="." instance=ExtResource( 2 )]
position = Vector2( 511, 132 )
drop = "bigHeart"

[node name="Pedestal5" parent="." instance=ExtResource( 2 )]
position = Vector2( 638, 132 )
drop = "dagger"

[node name="Exit" type="Area2D" parent="."]
position = Vector2( 695, 134 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( -2.5, 9.5 )
shape = SubResource( 1 )

[node name="WalkDest" type="Node2D" parent="."]
position = Vector2( 717, 134 )

[node name="WallOverlay" type="Sprite" parent="."]
visible = false
position = Vector2( 729, 112 )
z_index = 500
z_as_relative = false
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 113, 80, 48, 64 )

[node name="MaskSecret" type="Sprite" parent="."]
position = Vector2( 632, 152 )
texture = ExtResource( 4 )
hframes = 10
vframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RevealSecret = SubResource( 2 )

[node name="SecretArea" type="Area2D" parent="."]
position = Vector2( 719, 132 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecretArea"]
position = Vector2( 19, 1 )
shape = SubResource( 3 )

[node name="SimonSpawn" type="Node2D" parent="."]
position = Vector2( 51, 144 )

[node name="Boundary" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2( -11, 79 )
shape = SubResource( 4 )

[node name="Boundary2" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary2"]
position = Vector2( 762, 72 )
shape = SubResource( 4 )

[node name="HiddenTreasure" parent="." instance=ExtResource( 6 )]
position = Vector2( 632, 152 )

[node name="Treasure" parent="HiddenTreasure" instance=ExtResource( 5 )]
points = 10000
type = 3
autostartTtl = false

[node name="Mask" type="Sprite" parent="HiddenTreasure"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 7 )

[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
[connection signal="body_entered" from="SecretArea" to="." method="_on_SecretArea_body_entered" flags=6]
